--- a/pyspark_ml.ipynb
+++ b/pyspark_ml.ipynb
@@ -595,7 +595,7 @@
     "    print(f\"Recall / Sensitivity: {recall:.3f}\")\n",
     "    print(f\"Specificity: {specificity:.3f}\")\n",
     "    print(f\"Precisión: {precision:.3f}\")\n",
-    "    print(f\"Exactitud: {accuracy:.3f}\")\n",
+    "    print(f\"Accuracy: {accuracy:.3f}\")\n",
     "    print(f\"F1-score: {f1_score:.3f}\")\n",
     "\n",
     "    print(\"Matriz de Confusión:\")\n",
@@ -615,7 +615,7 @@
       "Recall / Sensitivity: 0.857\n",
       "Specificity: 0.764\n",
       "Precisión: 0.862\n",
-      "Exactitud: 0.823\n",
+      "Accuracy: 0.823\n",
       "F1-score: 0.859\n",
       "Matriz de Confusión:\n",
       "+--------------------+---+---+\n",
@@ -636,7 +636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como vemos, aunque la prediccion alcanza al 86% de accuracy, aun podriamos intentar mejor esto, es por esto que utilizaremos otro tipo de modelo. En este caso voy a utilizar un algoritmo basado en grandiente, el ``gradient boosting``."
+    "Como vemos, aunque la prediccion alcanza al 82% de accuracy, aun podriamos intentar mejor esto, es por esto que utilizaremos otro tipo de modelo. En este caso voy a utilizar un algoritmo basado en grandiente, el ``gradient boosting``."
    ]
   },
   {
@@ -740,7 +740,7 @@
       "Recall / Sensitivity: 0.934\n",
       "Specificity: 0.930\n",
       "Precisión: 0.961\n",
-      "Exactitud: 0.933\n",
+      "Accuracy: 0.933\n",
       "F1-score: 0.947\n",
       "Matriz de Confusión:\n",
       "+--------------------+---+---+\n",
@@ -762,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obtuvimos un presición del 96%, bastante mejor que el obtenido con la regresion logistica"
+    "Obtuvimos un presición del 93%, bastante mejor que el obtenido con la regresion logistica"
    ]
   },
   {
