--- a/pyspark_ml.ipynb
+++ b/pyspark_ml.ipynb
@@ -762,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obtuvimos un presición del 93%, bastante mejor que el obtenido con la regresion logistica"
+    "Obtuvimos un Accuracy del 93%, bastante mejor que el obtenido con la regresion logistica"
    ]
   },
   {
